--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,9 +1,9 @@
 version: 2.1
 
 orbs:
-    hello: circleci/hello-build@0.0.7 # uses the circleci/buildpack-deps Docker image
+    hello-build: circleci/hello-build@0.0.14 # uses the circleci/buildpack-deps Docker image
 
 workflows:
-    "Hello Workflow":
+    Hello Workflow:
         jobs:
-          - hello/hello-build
+          - hello-build/hello-build
