--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
-version: 2.1
-
-orbs:
-    hello-build: circleci/hello-build@0.0.14 # uses the circleci/buildpack-deps Docker image
-
-workflows:
-    Hello Workflow:
-        jobs:
-          - hello-build/hello-build
+version: 2.0 # use CircleCI 2.0
+jobs: # a collection of steps
+ build: # runs not using Workflows must have a `build` job as entry point
+   docker: # run the steps with Docker
+     - image: alpine:3.7 # ...with this image as the primary container; this is where all `steps` will run
+   steps: # a collection of executable commands
+     - run:
+         name: The First Step
+         command: |
+           echo 'Hello World!'
+           echo 'This is the delivery pipeline'
