--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,3 +9,4 @@ jobs: # a collection of steps
          command: |
            echo 'Hello World!'
            echo 'This is the delivery pipeline'
+           echo 'Sharon very nice you are learning to us circleci'
