--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,6 @@ jobs: # a collection of steps
      - run:
         name: Code Has Arrived
         command: |
+          pwd
           ls -al
           echo '^^^That should look familiar^^^'
