add node docker from circleci repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,11 @@
 version: 2.0 # use CircleCI 2.0
 jobs: # a collection of steps
  build: # runs not using Workflows must have a `build` job as entry point
+    # pre-built images: https://circleci.com/docs/2.0/circleci-images/
    docker: # run the steps with Docker
-     - image: alpine:3.7 # ...with this image as the primary container; this is where all `steps` will run
+     - image: circleci/node:10-browsers  # ...with this image as the primary container; this is where all `steps` will run
    steps: # a collection of executable commands
-     - checkout # special step to check out source code to working directory
+     - checkout # special step to check out source code to working directory , default directory path /root/project
      - run:
          name: The First Step
          command: |
@@ -18,3 +19,8 @@ jobs: # a collection of steps
           pwd
           ls -al
           echo '^^^That should look familiar^^^'
+
+     - run:
+        name: Running in a Unique Container
+        command: |
+          node -v
